# aaas

./: .gitignore  Cargo.toml  README.md  flake.nix  package.nix
.github/workflows/: ci.yaml  docker.yaml
src/: main.rs  telemetry.rs
