[package]
name = "aaas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
agg = { git = "https://github.com/asciinema/agg", rev = "v1.4.2" }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
axum = { version = "0.6", features = ["macros"] }
bytes = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing-opentelemetry = "0.19.0"
opentelemetry-otlp = "0.12.0"
opentelemetry = { version = "0.19.0", features = ["rt-tokio"] }
serde = { version = "1.0.164", features = ["derive"] }
tower-http = { version = "0.4", features = ["trace"] }
